--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -107,6 +107,7 @@
 		
 	</div>
 	<%= paginate @sale_books, :window=>2 %>
+</div>
 <script>
 	$(function () {
 		$('[data-toggle="tooltip"]').tooltip({html:true,placement:"bottom"});
