--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,9 @@
  *= require jquery.fileupload-ui
  *= require font-awesome
  *= require bootstrap3-switch
+ *= require animate.min
+ *= stub new-index
+ *= stub login 
  *= require_tree .
 
- 
  */
