--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,97 +1,78 @@
-<ul class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-  <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-				<span class="sr-only">Toggle navigation</span>
+<nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+	<div class="container">
+		<!-- Brand and toggle get grouped for better mobile display -->
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				<span class="sr-only"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-      <a class="navbar-brand " href="/main/index" style="font-family:arial;">			
-				NCTU<sup>+</sup>
+			<a class="navbar-brand page-scroll" href="/main/index">
+				NCTU+
 			</a>
-
 		</div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="navbar-collapse collapse" >
-      <ul class="nav navbar-nav">
-				<% if current_user and not current_user.isNormal? %>
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">管理<b class="caret"></b></a>
-						<ul class="dropdown-menu">
-						<% if current_user.isAdmin? %>
-							<li><a href="/admin/users" rel="nofollow" data-no-turbolink>使用者<span class="badge pull-right"><%=User.all.count%></span></a></li>
-						<% end %>
-							<li><a href="/departments" rel="nofollow">系<span class="badge pull-right"><%=Department.all.count%></span></a></li>
-							<li><a href="/admin/course_maps/" rel="nofollow">課程地圖</a></li>
-							<li><a href="/admin/user_statistics" rel="nofollow" data-no-turbolink>統計資料</a></li>
-							<!--<li><a href="/main/student_import" rel="nofollow">手動匯入</a></li>
-							<li><a href="/admin/ee104" rel="nofollow">電機104級畢業學分預審</a></li>-->							
-						</ul>	
-					</li>
-				<% end %>
-				<li><a href="/books/" rel="nofollow">二手書<sup>BETA</sup></a></li>
-				<li><a href="/courses/" rel="nofollow">全校課程</a></li>
-				<li><a href="/courses/simulation" rel="nofollow" data-no-turbolink>模擬排課</a></li>
-				<li><a href="/user/?show_stat=true" rel="nofollow">算學分</a></li>				
-				
-				<!--<li><a href="/course_maps" rel="nofollow">課程地圖</a></li>
-				<li><a href="/events/" rel="nofollow">talk</a></li>
-				-->
-			
-      </ul>
-			
-			<ul class="nav navbar-nav navbar-right">
-
+		<!-- Collect the nav links, s, and other content for toggling -->
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="font-family:'微軟正黑體','Microsoft JhengHei';">
+			<ul class="nav navbar-nav navbar-left">
 				<li>
-					<a onClick="showCart();" href="javascript:void(0);" class="no-padding-bottom"><%= fa_icon("shopping-cart 2x", :id=>"cart_but", :title=>"課程收藏") %></a>
+					<a class="page-scroll" href="/books/" rel="nofollow">二手書</a>
 				</li>
-	
-			<% if current_user %>	
 				<li>
-					<a href="#" class="toolTip dropdown-toggle toolTip" data-toggle="dropdown" title="課表"><%= fa_icon("calendar 2x", :id=>"sm_schd_button")%></a>
-						<ul class="dropdown-menu">
-							<% sems = user_semester(current_user) %>
-							<% if sems.count==0 %>
-							<li class="text-center">無資料</li>
-							<% end %>
-							<% sems.each do |sem| %>
-							<li><a href="javascript:void(0)" rel="nofollow" class="view-timetable" sem="<%=sem.id.to_s %>"><%=sem.name %></a></li>						
-							<% end %>
-					</ul>	
+					<a class="page-scroll" href="/courses/">全校課程</a>
+				</li>				
+				<li>
+					<a class="page-scroll" href="/courses/simulation">模擬排課</a>
 				</li>
-			
-				<li class="dropdown">		
-					<%= link_to  "/user/", class: "dropdown-toggle disabled", 'data-toggle'=> "dropdown" do %>
-						<% if current_user.hasFb? %>
-							<%= image_tag "http://graph.facebook.com/"<<session[:auth_facebook][:uid]<<"/picture", size: "25x25" %>
-						<% end %>
-						<%=current_user.name%>
-					<% end %>
-					<ul class="dropdown-menu">					
-            <li>
-              <a href="/user/collections">課表收藏</a>
-            </li>				
-						<li>
-								<a href="/user/edit/">編輯個人資料</a>
-						</li>	
-						<li>
-							<%= link_to  "登出", destroy_user_session_path, :method => :delete %>
-						</li>					
+				<li>
+					<a class="page-scroll" href="/user/">算學分</a>
+				</li>
+			</ul>
+			<ul class="nav navbar-nav navbar-right">				
+				<li class="dropdown hidden" >					
+					<a class= "dropdown-toggle disabled" data-toggle="dropdown">
+						<i class="fa fa-1x fa-caret-down text-light" style="line-height:0px;"></i>
+						個人功能
+					</a>
+					<ul class="dropdown-menu" style="background: rgba(0, 0, 0, 0.6);">
+						<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;"  >
+							<a href="javascript:void(0);" style="color:white;" onClick="showCart();">課程收藏</a>
+						</li>
+						<li class="item hidden">
+							課表
+						</li>
 					</ul>
 				</li>
-		<% else %>
-				<li>
-					<%=link_to "登入", new_user_session_path %>
-				</li>	
-		<% end %>  			
-			</ul>
 				
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container -->
-</ul>
+				<% if current_user %>
+					<li class="dropdown" >		
+						<%= link_to  "/user/", class: "dropdown-toggle disabled", 'data-toggle'=> "dropdown" do %>
+							<% if current_user.hasFb? %>
+								<%= image_tag "http://graph.facebook.com/"<<session[:auth_facebook][:uid]<<"/picture", size: "25x25" %>
+							<% end %>
+							<%=current_user.name%>
+						<% end %>
+						<ul class="dropdown-menu" style="background: rgba(0, 0, 0, 0.6);">					            			
+							<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;">
+								<a href="/user/edit/" style="color:white;">編輯個人資料</a>
+							</li>	
+							<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;">
+								<%= link_to  "登出", destroy_user_session_path, :method => :delete, :style=>"color:white;" %>
+							</li>					
+						</ul>
+					</li>			
+				<% else %>
+					<li>
+						<%=link_to "登入",new_user_session_path,class:"page-scroll",'data-no-turbolink'=>""%>
+					</li>	
+				<% end %>
+			</ul>
+		</div>
+			<!-- /.navbar-collapse -->
+	</div><!-- /.container -->
+	
+</nav>
 
 <%= javascript_include_tag "courses/table", "data-turbolinks-track" => true %>
 
