--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="">
+	<meta name="author" content="">
 	
-	
-<!--<link rel="shortcut icon" href="/favicon.ico" />-->
   <title>NCTU+</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
   <%= csrf_meta_tags %>
 
 	<% if params[:controller]!="main"%>
-		<meta name="robots" content="noindex">
-		
+		<meta name="robots" content="noindex">	
 	<% end %>
 	
 	<meta property="fb:app_id" content="<%=Facebook::APP_ID%>" />
@@ -27,7 +30,7 @@
 	
 </head>
 
-<body style="background-color:#e9eaed;">
+<body id="page-top" style="background-color:#e9eaed;">
 
 <% image_tag(asset_path("head_1.jpg"), :id=>'bg1', :class=>"bg", :alt=>"NCTU+")%>
 
@@ -47,15 +50,25 @@
 	<%= render 'layouts/header' %>
 <!-- layouts/header end -->
 
-<div id="content-contaier" class="container" style="margin-top:60px;margin-bottom:30px;" >
-	<%= yield %>	
-</div>
 
-<%= render 'layouts/footer' %>
+<% if current_page?('/')||current_page?('/main/index')||current_page?('/login')%>
+	<%= yield %>
+<% else %>
+	<div id="content-contaier" class="container" style="margin-top:60px;" >
+		<%= yield %>
+	</div>
+<% end %>
+<%= render "layouts/footer" %>
+
 
 </body>
 <script>
 	$(document).ready(function() {
+
+		initHeader();
+		$(window).bind("load resize",function() {
+			initHeader();
+		});
 		<% if flash[:notice] %>
 		  <% if flash[:notice].kind_of? String%>
 		    toastr.warning("<%= flash[:notice] %>");
