--- a/app/assets/stylesheets/login.css.erb
+++ b/app/assets/stylesheets/login.css.erb
@@ -104,7 +104,7 @@ header {
 header .header-content {
     position: relative;
     width: 100%;
-    padding: 100px 15px;
+    //padding: 100px 15px;
     text-align:center;
 }
 
@@ -148,12 +148,12 @@ header .header-content .header-content-inner p {
     }
 
     header .header-content {
-        position: absolute;
+        /*position: absolute;
         top: 50%;
         padding: 0 50px;
         -webkit-transform: translateY(-50%);
         -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
+        transform: translateY(-50%);*/
     }
 
     header .header-content .header-content-inner {
