--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,11 @@
-<div class="footer1">
+<div class="footer">
 	&copy; Copy Right NCTU+ 2015 
-	<a href="https://www.facebook.com/nctuplus" style="text-decoration:none;color:white" target="blank">
-		<i class="fa fa-2x fa-facebook-square text-light" style="line-height:50px;margin-left:20px;outline:none;color:white"></i>
+	<a href="https://www.facebook.com/nctuplus" style="color:white;" target="blank">
+		<i class="fa fa-2x fa-facebook-square text-light" style="line-height:50px;margin-left:20px;outline:none;"></i>
 	</a>
 	<a href="https://github.com/t6847kimo/nctuplus/" style="text-decoration:none;color:white" target="blank">
-		<i class="fa fa-2x fa-github-square text-light" style="line-height:50px;margin-left:8px;outline:none;color:white"></i>
+		<i class="fa fa-2x fa-github-square text-light" style="line-height:50px;margin-left:8px;outline:none;"></i>
 	</a>
 	<!--<i class="fa fa-2x fa-envelope wow bounceIn text-light" style="line-height:50px;margin-left:10px;"></i>
 	-->
 </div>
-
-
