--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,7 +26,7 @@
 					<a class="page-scroll" href="/courses/simulation">模擬排課</a>
 				</li>
 				<li>
-					<a class="page-scroll" href="/user/">算學分</a>
+					<a class="page-scroll" href="/user/" data-no-turbolink>算學分</a>
 				</li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">				
@@ -47,7 +47,7 @@
 				
 				<% if current_user %>
 					<li class="dropdown" >		
-						<%= link_to  "/user/", class: "dropdown-toggle disabled", 'data-toggle'=> "dropdown" do %>
+						<%= link_to  "/user/", class: "dropdown-toggle disabled", 'data-toggle'=> "dropdown",'data-no-turbolink'=>"true" do %>
 							<% if current_user.hasFb? %>
 								<%= image_tag "http://graph.facebook.com/"<<session[:auth_facebook][:uid]<<"/picture", size: "25x25" %>
 							<% end %>
