--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -16,7 +16,7 @@
 		$(".tab-link").click(function(e){
 			$("#others").load($(this).attr("url"));
 		});
-		
+		$(".footer").addClass("footer-force-bot");
 		<% if params[:msg] %>
 			alert("<%=params[:msg]%>");
 		<% end %>
