--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -39,9 +39,6 @@
 						<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;"  >
 							<a href="javascript:void(0);" style="color:white;" onClick="showCart();">課程收藏</a>
 						</li>
-						<li class="item hidden">
-							課表
-						</li>
 					</ul>
 				</li>
 				
@@ -53,10 +50,14 @@
 							<% end %>
 							<%=current_user.name%>
 						<% end %>
-						<ul class="dropdown-menu" style="background: rgba(0, 0, 0, 0.6);">					            			
+						<ul class="dropdown-menu" style="background: rgba(0, 0, 0, 0.6);">
+							<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;">
+								<a href="javascript:void(0);" onclick="" style="color:white;">歷年課表</a>
+							</li>
 							<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;">
 								<a href="/user/edit/" style="color:white;">編輯個人資料</a>
-							</li>	
+							</li>
+							
 							<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;">
 								<%= link_to  "登出", destroy_user_session_path, :method => :delete, :style=>"color:white;" %>
 							</li>					
@@ -108,50 +109,7 @@
     share_link("<%=j root_url %>shares/"+data.hash_share);
     
   }//group_share
-  
-	function show_timetable_on_modal(semester_id, showNow){
-		var result=0 ;
-		$.ajax({
-			url: "/user/get_courses",
-			data:{
-				type: "course_table",
-				sem_id: semester_id
-			},
-			dataType: "json",
-			success: function(data){
-				var result = $.extend(true, [], data);
-				var $table = $('<table>').addClass('table table-bordered');
-        data.config = {
-          deletable: false ,
-          selectable: false,
-          popover: true,
-					downloadable: true,
-		      semester_id: semester_id
-        };     
-				$table.CourseTable(data) ;			
-		
-				$('#global-modal .close').remove();
-				if(data.hash_share){
-          var $data = $('<div>').addClass('row');
-          $data.append($('<div>').addClass('col-md-2').css('margin-top','5px').html(data.semester_name));
-        }else
-          var $data = $('<div>').addClass('text-center').html(data.semester_name);
-        
-				showGlobalModal( $data, $table);
-            
-				setTimeout(function(){ //wait for the modal show
-				if(data.hash_share){
-				  $data.hide();
-          $table.CourseTable("renderImg", "upload") ;
-          group_share($data, {hash_share: data.hash_share}) ;
-          $data.show();      
-        }
-			    return false ;
-        }, 500);
-      }
-		});
-		return ;
-	}
+
 	<% end %>	
 </script>
 
