--- a/app/assets/stylesheets/new-index.css.erb
+++ b/app/assets/stylesheets/new-index.css.erb
@@ -513,7 +513,7 @@ fieldset[disabled] .btn-primary.active {
     background-color: #fff;
 }
 
-.btn {
+.btn-index {
     border: 0;
     border-radius: 6px;
     text-transform: uppercase;
