--- a/app/views/user/edit.html.erb
+++ b/app/views/user/edit.html.erb
@@ -8,9 +8,14 @@
 		<% if current_user.hasE3?%>
 		<div class="form-group">
 			<h4><%=label_tag '結合',"結合",class:"col-sm-2 control-label"%></h4>
-			<div class="col-md-9">
-				<%=link_to "/auth/facebook",class:"btn  btn-primary",disabled:current_user.hasFb? do%>
+			<div class="col-md-2">
+				<%=link_to "/auth/facebook",class:"btn  btn-primary",disabled: current_user.hasFb? do%>
 					<%=fa_icon("facebook")%>acebook
+				<% end %>
+			</div>
+			<div class="col-md-7 text-color-green">
+				<% if params[:error]=="email" and not current_user.hasFb? %>
+				Email may be the same as your FB account. Try to combine them!
 				<% end %>
 			</div>
 		</div>
