share course table open

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,6 +16,23 @@
 		<!-- Collect the nav links, s, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="font-family:'微軟正黑體','Microsoft JhengHei';">
 			<ul class="nav navbar-nav navbar-left">
+				<% if current_user and not current_user.isNormal? %>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">管理<b class="caret"></b></a>
+						<ul class="dropdown-menu" style="background: rgba(0, 0, 0, 0.6);">
+						<% if current_user.isAdmin? %>
+							<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;"><a href="/admin/users" rel="nofollow" style="color:white;" data-no-turbolink>使用者<span class="badge pull-right"><%=User.all.count%></span></a></li>
+						<% end %>
+							<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;"><a href="/departments" rel="nofollow" style="color:white;">系<span class="badge pull-right"><%=Department.all.count%></span></a></li>
+							<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;"><a href="/admin/course_maps/" rel="nofollow" style="color:white;">課程地圖</a></li>
+							<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;"><a href="/admin/user_statistics" rel="nofollow" data-no-turbolink style="color:white;">統計資料</a></li>
+							<!--
+							<li><a href="/main/student_import" rel="nofollow">手動匯入</a></li>
+							<li><a href="/admin/ee104" rel="nofollow">電機104級畢業學分預審</a></li>
+							-->							
+						</ul>	
+					</li>
+				<% end %>
 				<li>
 					<a class="page-scroll" href="/books/" rel="nofollow">二手書</a>
 				</li>
@@ -33,19 +50,6 @@
 				<li>
 					<%=link_to "課程收藏", "javascript:void(0);",class:"page-scroll", onClick:"showCart();" %>
 				</li>
-				<!--
-				<li class="dropdown hidden" >					
-					<a class= "dropdown-toggle disabled" data-toggle="dropdown">
-						<i class="fa fa-1x fa-caret-down text-light" style="line-height:0px;"></i>
-						個人功能
-					</a>
-					<ul class="dropdown-menu" style="background: rgba(0, 0, 0, 0.6);">
-						<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;"  >
-							<a href="javascript:void(0);" style="color:white;" onClick="showCart();">課程收藏</a>
-						</li>
-					</ul>
-				</li>
-				-->
 				<% if current_user %>
 					<li class="dropdown" >		
 						<%= link_to  "/user/", class: "dropdown-toggle disabled", 'data-toggle'=> "dropdown",'data-no-turbolink'=>"true" do %>
@@ -57,6 +61,9 @@
 						<ul class="dropdown-menu" style="background: rgba(0, 0, 0, 0.6);">
 							<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;">
 								<a href="javascript:void(0);" onclick="show_timetable_on_modal(<%=Semester::CURRENT.id%>, true);" style="color:white;">歷年課表</a>
+							</li>
+							<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;">
+								<a href="/user/collections/" style="color:white;">課表收藏</a>
 							</li>
 							<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;">
 								<a href="/user/edit/" style="color:white;">編輯個人資料</a>
